@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.4878 2004/02/17 04:30:17 minskim Exp $
+$NetBSD: CHANGES,v 1.4879 2004/02/17 08:26:27 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -889,3 +889,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added p5-MIME-Types-1.12 [minskim 2004-02-17]
 	Added p5-Object-Realize-Later-0.15 [minskim 2004-02-17]
 	Added p5-Net-IP-1.20 [minskim 2004-02-17]
+	Updated x11-links to 0.22 [jlam 2004-02-17]
